fix : add overflow hidden in mobileWriteInfo

--- a/src/asset/scss/mobile/mobileWritesInfo.scss
+++ b/src/asset/scss/mobile/mobileWritesInfo.scss
@@ -22,6 +22,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        overflow: hidden;
         left : 100px;
         padding: 0 20px;
         margin: 20px 0;
